# git-chat

./: .flake8  LICENSE.md  README.md  mypy.ini  pyproject.toml
git_chat/: __main__.py  client.py
